footer gap fixed and italic font at testimonials

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,9 @@
     padding: 0 !important;
 }
 
+.gap-two {
+    margin: 0 !important;
+}
 .testimonials {
     padding: 30px;
     margin: 0;
@@ -115,6 +118,10 @@
     border: 0;
     height: 2px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.testimonials .client p {
+    
 }
 /*contact page------------------------------------------------*/
  form {
@@ -246,6 +253,10 @@ footer .copyright {
     .carousel-caption h6 {
         font-size: 10px;
         padding-bottom: 0px;
+    }
+
+    .testimonials .client {
+        font-size: 12px;
     }
     .address-contact {
          font-size: 14px;
